--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.3.2",
-        "@material-ui/core": "^4.11.1",
-        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^5.11.6",
-        "@testing-library/react": "^11.2.2",
-        "@testing-library/user-event": "^12.3.0",
+        "@testing-library/user-event": "^12.5.0",
         "concurrently": "^5.3.0",
         "graphql": "^15.4.0",
         "json-graphql-server": "^2.2.0",
-        "react": "16.8.0",
-        "react-dom": "^16.8.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
+        "react-test-renderer": "^17.0.1",
         "web-vitals": "^0.2.4"
     },
     "proxy": "http://localhost:5000",
@@ -41,5 +39,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/react": "^11.2.2"
     }
 }
